docs : Transaction 동작 방식 & 전파 속성

--- a/Spring Boot/4. Transaction 동작 방식 & 전파 속성.md
+++ b/Spring Boot/4. Transaction 동작 방식 & 전파 속성.md
@@ -1,1 +1,142 @@
 
+# 트랜잭션이란
+
+트랜잭션은 데이터베이스에서 하나의 작업 단위를 의미하며, 다음의 `ACID` 원칙을 보장합니다.
+
+- `Atomicity`(원자성) : 모두 성공하거나, 모두 실패해야 한다.
+- `Consistency`(일관성) : 수행 전후 데이터의 일관성이 유지되어야 한다.
+- `Isolation`(격리성) : 동시에 수행되는 트랜잭션 간 간섭 받으면 안 된다.
+- `Durablility`(지속성) : 커밋된 데이터는 영구 보존되어야 한다.
+
+# Spring에서 트랜잭션 관리
+
+Spring에서는 `@Transactional` 어노테이션을 통해 선언적 트랜잭션 관리를 합니다.
+내부적으로 `AOP` 기반 프록시를 통해 트랜잭션을 `시작/커밋/롤백`합니다.
+
+```java
+@Service
+public class MemberService {
+
+    @Transactional
+    public void createMember() {
+        memberRepository.save(...); // 트랜잭션 시작됨
+        ...
+    }
+}
+```
+
+## 내부구조
+
+→ 프록시 객체가 메서드를 감쌈
+→ 트랜잭션 시작 (PlatformTransactionManager)
+→ 비즈니스 로직 실행
+→ 예외 여부 판단 후 commit or rollback
+
+# 트랜잭션 전파 속성 (Propagation)
+
+트랜잭션 전파는 기존 트랜잭션이 있을 때, 새로운 트랜잭션을 어떻게 시작하거나 이어갈지 결정하는 정책입니다.
+`@Transactional(propagation = . . .)` 형식으로 지정합니다.
+
+## 전파 옵션
+
+| 전파 속성 | 설명 |
+| --- | --- |
+| `REQUIRED` (기본값) | 현재 트랜잭션이 있으면 참여, 없으면 새로 생성 |
+| `REQUIRES_NEW` | 항상 새로운 트랜잭션 시작 (기존 트랜잭션은 일시 중단) |
+| `NESTED` | 기존 트랜잭션 내에서 savepoint 생성하여 중첩 실행 |
+| `SUPPORTS` | 트랜잭션 있으면 참여, 없으면 그냥 실행 |
+| `NOT_SUPPORTED` | 트랜잭션 없이 실행 (있으면 일시 중단) |
+| `NEVER` | 트랜잭션이 있으면 예외 발생 |
+| `MANDATORY` | 반드시 기존 트랜잭션이 있어야 함 (없으면 예외) |
+
+## 전파 옵션 예시
+
+1. 기본 동작 : `REQUIRED`
+
+```java
+@Transactional
+public void outer() {
+    inner(); // 같은 트랜잭션에 참여
+}
+
+@Transactional
+public void inner() {
+    // 동일 트랜잭션
+}
+
+=> 둘 중 하나라도 예외 발생시 전체 롤백됨
+```
+
+1. 독립 실행 : `REQUIRES_NEW`
+
+```java
+@Transactional
+public void outer() {
+    try {
+        inner(); // 새로운 트랜잭션
+    } catch (Exception e) {
+        log.warn("inner 실패");
+    }
+}
+
+@Transactional(propagation = Propagation.REQUIRES_NEW)
+public void inner() {
+    // 별도 트랜잭션 → outer rollback 영향 없음
+}
+
+=> inner()는 별도의 트랜잭션이므로 rollback 독립적으로 처리됨
+```
+
+1. 중첩 실행 : NESTED
+
+```java
+@Transactional
+public void outer() {
+    inner(); // savepoint 생성
+    throw new RuntimeException("예외");
+}
+
+@Transactional(propagation = Propagation.NESTED)
+public void inner() {
+    // savepoint 생성됨
+}
+
+=> outer()에서 예외 발생시, inner()는 세이브포인트 단위로 롤백
+```
+
+# 롤백 조건
+
+Spring은 기본적으로 다음과 같은 경우에 롤백을 수행합니다:
+
+| 예외 종류 | 롤백 여부 | 비고 |
+| --- | --- | --- |
+| `RuntimeException`, `Error` | O | 기본 동작 |
+| `CheckedException` | X | 직접 지정해야 함 (`rollbackFor`)
+
+@Transactional(rollbackFor = IOException.class) |
+
+# 주의 사항
+
+1. `자기 자신(this)` 호출은 트랜잭션 적용되지 않습니다.
+→ 반드시 외부에서 호출되어야 프록시가 적용됩니다.
+2. `private` 메서드는 트랜잭션 적용 안 됩니다.
+3. `readOnly = true`로 설정시 
+→ 성능 최적화 가능 (예 : 조회 쿼리만 실행)
+
+# 요약
+
+| 항목 | 요약 |
+| --- | --- |
+| 트랜잭션 시작 | `@Transactional` 사용 시 프록시로 트랜잭션 감쌈 |
+| 커밋 & 롤백 | 메서드 종료 시 자동 `commit` / 
+예외 시 `rollback` |
+| 전파 속성 | 트랜잭션 간 관계를 정의 (`REQUIRED`, `REQUIRES_NEW`, `NESTED` 등) |
+| 실무 팁 | 자기 호출, 예외 타입 주의 / `readOnly` 사용 권장 |
+
+# Reference
+
+[https://sjh9708.tistory.com/243](https://sjh9708.tistory.com/243)
+
+[https://dgjinsu.tistory.com/87](https://dgjinsu.tistory.com/87)
+
+[https://deveric.tistory.com/86](https://deveric.tistory.com/86)
