docs :  힙, 계수정렬

--- a/Algorithm/정렬.md
+++ b/Algorithm/정렬.md
@@ -249,6 +249,145 @@ int main(void) {
 
 ```
 
+# 힙(heap) 정렬
+
+힙은 최솟값이나 최댓값을 빠르게 찾아내기 위한 `완전이진트리`를 기반으로 하는 트리
+힙은 `최대 힙`과 `최소 힙`이 존재
+최대 힙 = 부모 노드가 가장 큰 힙
+최소 힙 = 부모노드가 가장 작은 힙
+
+시간복잡도 O(NlogN)
+
+---
+
+아래의 경우 5가 7보다 작지만 7의 부모노드로 있기 때문에 최대힙이 성립이 안 된다.
+이럴 경우 최대 힙으로 만들기 위해서 5와 7을 바꿔주면 된다.
+
+![image.png](./assets/힙1.png)
+
+## 예시
+
+- “7 6 5 8 3 5 9 1 6”을 오름차순 정렬하세요
+
+여기에서 가장 쉽게 트리를 표현하는 방법은 인덱스 순서대로 표현하는 것입니다.(왼쪽 트리)
+하지만 이렇게 표현을 하면 최대 힙이 아니므로 정리를 해야 합니다. ( 오른쪽 트리)
+
+![image.png](./assets/힙2.png)
+
+```cpp
+#include <stdio.h>
+
+int number = 9;
+int heap[9] = {7, 6, 5, 8, 3, 5, 9, 1, 6};
+
+int main(void) {
+    // 힙 구성
+    for(int i = 1; i < number; i++) {
+        int c = i;
+        do {
+            int root = (c - 1) / 2;
+            if(heap[root] < heap[c]) {
+                int temp = heap[root];
+                heap[root] = heap[c];
+                heap[c] = temp;
+            }
+            c = root;
+        } while (c != 0);
+    }
+
+    // 크기를 줄여가며 반복적으로 힙을 구성
+    for(int i = number - 1; i >= 0; i--) {
+        int temp = heap[0];
+        heap[0] = heap[i];
+        heap[i] = temp;
+
+        int root = 0;
+        int c = 1;
+        do {
+            c = 2 * root + 1;
+            // 자식 중에 더 큰 값을 찾기
+            if(c < i - 1 && heap[c] < heap[c + 1]) {
+                c++;
+            }
+            // 루트보다 자식이 크다면 교환
+            if(c < i && heap[root] < heap[c]) {
+                temp = heap[root];
+                heap[root] = heap[c];
+                heap[c] = temp;
+            }
+            root = c;
+        } while (c < i);
+    }
+
+    // 결과 출력
+    for(int i = 0; i < number; i++) {
+        printf("%d ", heap[i]);
+    }
+}
+
+```
+
+# 계수 정렬
+
+범위 조건이 있는 경우 굉장히 빠르다
+시간 복잡도 O(N)
+
+숫자 크기만큼의 배열 하나를 만들어주고
+정렬해야 할 숫자들의 개수를 차례로 세어줍니다.
+수를 다 세었다면 갯수만큼 그 수를 출력을 하면 됩니다.
+
+## 예제
+
+아래의 수를 정렬하시오
+
+1 3 2 4 3 2 5 3 1 2 3 4 4 3 5 1 2 3 5 2 3 1 4 3 5 1 2 1 1 1
+
+크기 1-5
+
+|  | 크기 = 1 | 크기 = 2 | 크기 = 3 | 크기 = 4 | 크기 = 5 |
+| --- | --- | --- | --- | --- | --- |
+| 처음 상태 | 0 | 0 | 0 | 0 | 0 |
+| 최종 상태 | 8 | 6 | 8 | 4 | 4 |
+
+```cpp
+#include <stdio.h>
+
+int main(void)
+{
+    int temp;
+    int count[6];
+    int array[30] = {
+        1, 3, 2, 4, 3, 2, 5, 3, 1, 2,
+        3, 4, 4, 3, 5, 1, 2, 3, 5, 2,
+        3, 1, 4, 3, 5, 1, 2, 1, 1, 1
+    };
+
+    // 카운트 배열 초기화
+    for(int i = 1; i <= 5; i++)
+    {
+        count[i] = 0;
+    }
+
+    // 각 숫자의 개수 세기
+    for(int i = 0; i < 30; i++)
+    {
+        count[array[i]]++;
+    }
+
+    // 정렬된 형태로 출력
+    for(int i = 1; i <= 5; i++)
+    {
+        if(count[i] != 0)
+        {
+            for(int j = 0; j < count[i]; j++)
+                printf("%d ", i);
+        }
+    }
+
+    return 0;
+}
+```
+
 # Reference
 
 [https://m.blog.naver.com/ndb796/221227934987?recommendTrackingCode=2](https://m.blog.naver.com/ndb796/221227934987?recommendTrackingCode=2)
