--- a/Algorithm/그래프.md
+++ b/Algorithm/그래프.md
@@ -159,3 +159,125 @@ public class GraphSearch {
 }
 
 ```
+# Union-Find(Disjoint Set Union, DSU, 합집합)
+
+> 여러 개의 노드가 있을 때, 어떤 노드들이 같은 그룹(집합)에 속해 있는지 빠르게 판별
+> 
+> 
+> 서로 다른 두 그룹을 **하나의 그룹으로 합칠 수 있는 자료구조**
+> 
+- MST (최소 신장 트리, Kruskal 알고리즘)에 사용
+
+![image.png](./assets/유니온.png)
+
+- 0 단계 : 각 원소가 자기 자신을 루트로 가짐 (대표노드 = 자기 자신)
+- 1단계 : Union(1, 2)
+    - 1의 루트 : 1
+    - 2의 루트 : 2
+    - 서로 다르니 2를 1에 붙인다 → **1이 대표 루트**
+- 2단계 : Union(3, 5)
+    - 3의 루트 : 3
+    - 5의 루트 : 5
+    - 5를 3에 붙인다 → **3이 대표 루트**
+- 3단계 : Union(1, 4)
+    - 1의 루트 : 1
+    - 4의 루트 : 4
+    - 4를 1에 붙임 → **1이 대표**
+- 4단계 : Find(x) 결과
+    
+    
+    | 노드 | 루트(대표) |
+    | --- | --- |
+    | 1 | 1 |
+    | 2 | 1 |
+    | 4 | 1 |
+    | 3 | 3 |
+    | 5 | 3 |
+    | 6 | 6 |
+- 5단계 : Union(1, 5)
+    - 1의 루트 : 1
+    - 5의 루트 : 3
+        
+        → 서로 다른 그룹이므로 합침 → 보통은 **숫자가 작은 쪽**을 루트로 잡는다.
+        
+        → 여기선 **3을 1 밑에 붙임**
+        
+
+## 예시 코드
+
+```java
+public class UnionFind {
+    private int[] parent;
+
+    // 생성자: 초기화
+    public UnionFind(int size) {
+        parent = new int[size + 1]; // 보통 1번부터 사용하니까 size+1
+        for (int i = 1; i <= size; i++) {
+            parent[i] = i; // 자기 자신이 루트
+        }
+    }
+
+    // find: 루트 노드 찾기 + 경로 압축
+    public int find(int x) {
+        if (parent[x] != x) {
+            parent[x] = find(parent[x]); // 경로 압축
+        }
+        return parent[x];
+    }
+
+    // union: 두 집합 합치기
+    public void union(int a, int b) {
+        int rootA = find(a);
+        int rootB = find(b);
+
+        if (rootA != rootB) {
+            // 작은 루트를 기준으로 합침 (선택적)
+            if (rootA < rootB) {
+                parent[rootB] = rootA;
+            } else {
+                parent[rootA] = rootB;
+            }
+        }
+    }
+
+    // 같은 집합인지 확인
+    public boolean isConnected(int a, int b) {
+        return find(a) == find(b);
+    }
+
+    // 상태 출력 (디버깅용)
+    public void printParent() {
+        System.out.print("Parent Array: ");
+        for (int i = 1; i < parent.length; i++) {
+            System.out.print(parent[i] + " ");
+        }
+        System.out.println();
+    }
+
+    // 테스트
+    public static void main(String[] args) {
+        UnionFind uf = new UnionFind(6); // 1~6번 노드
+
+        uf.union(1, 2);
+        uf.union(3, 5);
+        uf.union(1, 4);
+
+        uf.printParent(); // 상태 확인
+
+        System.out.println("Find(2): " + uf.find(2)); // 루트: 1
+        System.out.println("Find(5): " + uf.find(5)); // 루트: 3
+
+        uf.union(1, 5); // 1번 집합과 3번 집합 연결
+
+        uf.printParent(); // 최종 상태
+        System.out.println("Find(5): " + uf.find(5)); // 루트: 1
+    }
+}
+
+```
+
+# Reference
+
+[https://m.blog.naver.com/ndb796/221230967614?recommendTrackingCode=2](https://m.blog.naver.com/ndb796/221230967614?recommendTrackingCode=2)
+
+[https://velog.io/@jinh2352/유니온-파인드-기초-이코테](https://velog.io/@jinh2352/%EC%9C%A0%EB%8B%88%EC%98%A8-%ED%8C%8C%EC%9D%B8%EB%93%9C-%EA%B8%B0%EC%B4%88-%EC%9D%B4%EC%BD%94%ED%85%8C)
