docs : 크루스칼 정리

--- a/Algorithm/그래프.md
+++ b/Algorithm/그래프.md
@@ -276,8 +276,141 @@ public class UnionFind {
 
 ```
 
+# 크루스칼 알고리즘
+
+> 모든 노드를 최소 비용으로 연결하는 트리(최소 신장 트리, MST)를 만드는 알고리즘
+> 
+> 
+> 간선 중심(Greedy)으로 하나씩 연결하면서, **사이클이 생기지 않도록** 연결
+> 
+> ⇒ 간선을 정렬며 하나씩 연결하고 유니온 파인드로 사이클만 피하면 되는 최소 비용 연결 알고리즘
+> 
+- 그래프의 모든 노드를 **최소 비용**으로 연결(MST)
+- 간선(edge)중심 + Greedy 방식
+- 유니온-파인드(Disjoint Set)로 **사이클** 방지
+- 모든 간선을 **가중치** 기준으로 오름차순 정렬
+
+## 작동 순서
+
+> `사이클`을 방지하기 위해서 유니온파인드를 사용한다.
+find(x)로 루트노드를 찾고
+union(a, b)로 두 노드를 같은 집합으로 합친다.
+만약 이미 같은 집합이면 사이클이 생기니 Pass한다.
+> 
+1. 모든 간선을 가중치 기준으로 오름차순 정렬
+2. 가중치가 가장 낮은 간선부터 선택
+3. 선택한 간선이 **사이클**을 만들지 않는다면 연결
+    - Union-Find 알고리즘 사용
+4. 사이클 생기면 건너뜀
+5. N개의 노드에 대해 N -1 개의 간선이 선택되면 종료
+
+![image.png](./assets//크루스칼.png)
+
+## 예시코드
+
+```java
+import java.util.*;
+
+class Edge implements Comparable<Edge> {
+    int from;
+    int to;
+    int weight;
+
+    public Edge(int from, int to, int weight) {
+        this.from = from;
+        this.to = to;
+        this.weight = weight;
+    }
+
+    // 간선 정렬 기준: 가중치 오름차순
+    @Override
+    public int compareTo(Edge other) {
+        return this.weight - other.weight;
+    }
+}
+
+class UnionFind {
+    private int[] parent;
+
+    public UnionFind(int size) {
+        parent = new int[size + 1]; // 노드 번호가 1번부터 시작한다고 가정
+        for (int i = 1; i <= size; i++) {
+            parent[i] = i;
+        }
+    }
+
+    public int find(int x) {
+        if (parent[x] != x) parent[x] = find(parent[x]);
+        return parent[x];
+    }
+
+    public void union(int a, int b) {
+        int rootA = find(a);
+        int rootB = find(b);
+
+        if (rootA != rootB) {
+            parent[rootB] = rootA;
+        }
+    }
+
+    public boolean isConnected(int a, int b) {
+        return find(a) == find(b);
+    }
+}
+
+public class KruskalMST {
+    public static void main(String[] args) {
+        int V = 7; // 정점 개수 (a~g -> 7개)
+        List<Edge> edges = new ArrayList<>();
+
+        // 간선 추가 (노드 번호는 a=1, b=2, ..., g=7로 매핑한다고 가정)
+        edges.add(new Edge(1, 6, 1)); // af
+        edges.add(new Edge(6, 5, 2)); // fe
+        edges.add(new Edge(5, 4, 3)); // ed
+        edges.add(new Edge(4, 3, 4)); // dc
+        edges.add(new Edge(3, 2, 5)); // cb
+        edges.add(new Edge(2, 7, 6)); // bg
+        edges.add(new Edge(7, 5, 7)); // ge
+        edges.add(new Edge(7, 4, 8)); // gd
+        edges.add(new Edge(1, 2, 9)); // ab
+
+        Collections.sort(edges); // 가중치 기준 정렬
+
+        UnionFind uf = new UnionFind(V);
+        int totalCost = 0;
+        List<Edge> mst = new ArrayList<>();
+
+        for (Edge edge : edges) {
+            if (!uf.isConnected(edge.from, edge.to)) {
+                uf.union(edge.from, edge.to);
+                totalCost += edge.weight;
+                mst.add(edge);
+            }
+        }
+
+        // 출력
+        for (Edge edge : mst) {
+            System.out.println("노드 " + edge.from + " - 노드 " + edge.to + " (가중치: " + edge.weight + ")");
+        }
+        System.out.println("총 비용: " + totalCost);
+    }
+}
+
+// 결과 예시
+노드 1 - 노드 6 (가중치: 1)
+노드 6 - 노드 5 (가중치: 2)
+노드 5 - 노드 4 (가중치: 3)
+노드 4 - 노드 3 (가중치: 4)
+노드 3 - 노드 2 (가중치: 5)
+노드 2 - 노드 7 (가중치: 6)
+총 비용: 21
+
+```
+
 # Reference
 
 [https://m.blog.naver.com/ndb796/221230967614?recommendTrackingCode=2](https://m.blog.naver.com/ndb796/221230967614?recommendTrackingCode=2)
 
 [https://velog.io/@jinh2352/유니온-파인드-기초-이코테](https://velog.io/@jinh2352/%EC%9C%A0%EB%8B%88%EC%98%A8-%ED%8C%8C%EC%9D%B8%EB%93%9C-%EA%B8%B0%EC%B4%88-%EC%9D%B4%EC%BD%94%ED%85%8C)
+
+[https://m.blog.naver.com/ndb796/221230994142?recommendTrackingCode=2](https://m.blog.naver.com/ndb796/221230994142?recommendTrackingCode=2)`
