docs : 에라토스테네스의 체 예시 gif 추가

--- a/Algorithm/7. 에라토스테네스의 체.md
+++ b/Algorithm/7. 에라토스테네스의 체.md
@@ -5,10 +5,10 @@
 - 시간 복잡도 O(N log N)
 
 ## 동작 원리
-
-> 가장 작은 소수인 2부터 시작해서 그 배수를 모두 지우는 작업을 반봅
+> 가장 작은 소수인 2부터 시작해서 그 배수를 모두 지우는 작업을 반복  
 ⇒ 남은 수는 전부 소수이다.
 > 
+![](./assets/에라토스테네스의체.gif)
 1. 2부터 N까지 모든 수를 나열
 2. 가장 작은 소수인 2부터 시작
     - 2의 배수(4,6,8, ..)를 모두 제거
