docs : 7. 프로세스 스케줄링 알고리즘

--- a/OS/7. 프로세스 스케줄링 알고리즘.md
+++ b/OS/7. 프로세스 스케줄링 알고리즘.md
@@ -1,7 +1,4 @@
 ## 1. 프로세스 스케줄링 알고리즘 종류
-
-대표적인 건 이 정도야:
-
 - **FCFS (First Come First Served)**
     
     줄 선 순서대로 처리. 단순하지만 Convoy Effect(느린 놈 때문에 뒤가 막힘) 있음.
@@ -101,7 +98,7 @@
 
 ## 7. 스케줄링 알고리즘 = "프로세스" 전용?
 
-- 아니, 스레드도 스케줄링 함.
+- 아님, 스레드도 스케줄링 함.
 - 다만 **프로세스 스케줄링**은 CPU 자원 분배 중심,
     
     **스레드 스케줄링**은 같은 프로세스 내부의 실행 흐름을 분배하는 거라 좀 더 미세 단위.
